--- a/Week 3/Spring Data JPA with Spring Boot, Hibernate/Difference between JPA, Hibernate and Spring Data JPA/jpa-hibernate-springdata-diff/jpa-hibernate-springdata-diff/src/main/resources/application.properties
+++ b/Week 3/Spring Data JPA with Spring Boot, Hibernate/Difference between JPA, Hibernate and Spring Data JPA/jpa-hibernate-springdata-diff/jpa-hibernate-springdata-diff/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
