--- a/Week 3/Spring Data JPA with Spring Boot, Hibernate/Spring Data JPA - Quick Example/ormlearn/src/main/resources/application.properties
+++ b/Week 3/Spring Data JPA with Spring Boot, Hibernate/Spring Data JPA - Quick Example/ormlearn/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=ormlearn
 # DataSource Settings
-spring.datasource.url=jdbc:h2:mem:ormlearn
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/ormlearn
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=12345
 server.port=8081
 
 # Hibernate Auto DDL
